infrastructure/k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: cashmate
spec:
  selector:
    app: kafka
  ports:
    - name: internal
      port: 9092
      targetPort: 9092

    - name: external
      port: 29092
      targetPort: 29092

  type: ClusterIP
