infrastructure/k8s/loan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  namespace: cashmate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      containers:
        - name: loan-service
          image: cashmate-loan-service:1.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: loan-service
  namespace: cashmate
spec:
  selector:
    app: loan-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
